# tinyflow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tags
python/tinyflow/: datasets.py
src/: c_api.cc  tinyflow.def
